@@ -2,6 +2,7 @@
  - Add use case for clean_serial_order().
  - Remove all other characters than number from edition number.
  - Remove all other characters than number from series ordinal.
+ - Rewrite check for 'marc_record' parameter in Transform to Mo::utils.
  - Use NKP Kramerius as Czech Digital Library.
 
 0.32 2025-10-21T13:17:51+02:00
